list, edit, atention

--- a/src/app/medical/appointment/add-appointments/add-appointments.component.html
+++ b/src/app/medical/appointment/add-appointments/add-appointments.component.html
@@ -160,7 +160,7 @@
                                 <div class="col-12 col-md-6 col-xl-4">  
                                     <div class="form-group local-forms">
                                         <label >First Name <span class="login-danger">*</span></label>
-                                        <input class="form-control" [(ngModel)]="first_name" name="name" type="text"  >
+                                        <input class="form-control" [(ngModel)]="first_name" name="first_name" type="text"  >
                                     </div>
                                 </div>
 
