--- a/src/app/medical/appointment/atencion-medical/atencion-medical.component.html
+++ b/src/app/medical/appointment/atencion-medical/atencion-medical.component.html
@@ -25,47 +25,52 @@
                                 <div class="col-12 py-4">  
                                     <h4>Datos del paciente: </h4>
                                 </div>
-                                <div class="col-12 col-md-6 col-xl-4">  
-                                    <div class="form-group local-forms">
-                                        <label >First Name <span class="login-danger">*</span></label>
-                                        <input class="form-control" disabled [(ngModel)]="name" name="name" type="text"  >
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-md-6 col-xl-4">
-                                    <div class="form-group local-forms">
-                                        <label >Surname <span class="login-danger">*</span></label>
-                                        <input class="form-control" disabled [(ngModel)]="surname" name="surname" type="text"  >
-                                    </div>
-                                </div>
-
-                                <div class="col-12 col-md-6 col-xl-4">
-                                    <div class="form-group local-forms">
-                                        <label >Mobile <span class="login-danger">*</span></label>
-                                        <input class="form-control" disabled [(ngModel)]="mobile" name="mobile" type="text"  >
-                                    </div>
-                                </div>
 
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >N° Documento <span class="login-danger">*</span></label>
                                         <input class="form-control"  disabled [(ngModel)]="identification_number" name="identification_number"  type="number"  >
                                     </div>
+                                    
+                                </div>
+                                <div class="col-12 col-md-6 col-xl-4">  
+                                    <div class="form-group local-forms">
+                                        <label >First Name <span class="login-danger">*</span></label>
+                                        <input class="form-control" disabled [(ngModel)]="first_name" name="first_name" type="text"  >
+                                    </div>
                                 </div>
 
+                                <div class="col-12 col-md-6 col-xl-4">
+                                    <div class="form-group local-forms">
+                                        <label >Surname <span class="login-danger">*</span></label>
+                                        <input class="form-control" disabled [(ngModel)]="last_name" name="last_name" type="text"  >
+                                    </div>
+                                </div>
+
+                                <div class="col-12 col-md-6 col-xl-4">
+                                    <div class="form-group local-forms">
+                                        <label >Mobile <span class="login-danger">*</span></label>
+                                        <input class="form-control" disabled [(ngModel)]="first_phone" name="first_phone" type="text"  >
+                                    </div>
+                                </div>
+
+                                
+                              <!-- 
                                 <div class="col-12 col-sm-3">
                                     <div class="form-group local-forms">
                                         <label>Nombre del Acompañante  <span class="login-danger">*</span></label>
                                         <input class="form-control" disabled [(ngModel)]="name_companion" type="text" name="name_companion">
                                     </div>
                                 </div>
-
+                            
                                 <div class="col-12 col-sm-3">
                                     <div class="form-group local-forms">
                                         <label>Apellido del Acompañante  <span class="login-danger">*</span></label>
                                         <input type="text" class="form-control" disabled [(ngModel)]="surname_companion" name="surname_companion" >
                                     </div>
                                 </div>
+
+                            -->
                             </div>
 
                             <div class="row align-items-center">
