--- a/src/app/medical/appointment/edit-appointments/edit-appointments.component.html
+++ b/src/app/medical/appointment/edit-appointments/edit-appointments.component.html
@@ -175,6 +175,12 @@
                                     <h4>Datos del paciente: </h4>
                                     <button class="btn btn-sm btn-dark" (click)="resetPatient()">O</button>
                                 </div>
+                                 <div class="col-12 col-md-6 col-xl-4">
+                                    <div class="form-group local-forms">
+                                        <label >N° Documento <span class="login-danger">*</span></label>
+                                        <input class="form-control" (keyup.enter)="filterPatient()"  disabled [(ngModel)]="identification_number" name="identification_number"  type="number"  >
+                                    </div>
+                                </div>
                                 <div class="col-12 col-md-6 col-xl-4">  
                                     <div class="form-group local-forms">
                                         <label >First Name <span class="login-danger">*</span></label>
@@ -192,17 +198,12 @@
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >Mobile <span class="login-danger">*</span></label>
-                                        <input class="form-control" disabled [(ngModel)]="mobile" name="mobile" type="text"  >
+                                        <input class="form-control" disabled [(ngModel)]="first_phone" name="first_phone" type="text"  >
                                     </div>
                                 </div>
 
-                                <div class="col-12 col-md-6 col-xl-4">
-                                    <div class="form-group local-forms">
-                                        <label >N° Documento <span class="login-danger">*</span></label>
-                                        <input class="form-control" (keyup.enter)="filterPatient()"  disabled [(ngModel)]="identification_number" name="identification_number"  type="number"  >
-                                    </div>
-                                </div>
-
+                               
+                                 <!-- 
                                 <div class="col-12 col-sm-3">
                                     <div class="form-group local-forms">
                                         <label>Nombre del Acompañante  <span class="login-danger">*</span></label>
@@ -216,9 +217,11 @@
                                         <input type="text" class="form-control" disabled [(ngModel)]="surname_companion" name="surname_companion" >
                                     </div>
                                 </div>
+                            -->
                             </div>
-
+                            
                             <div class="row align-items-center py-4">
+                                 <!-- 
                                 <div class="col-12 py-4">  
                                     <h4>Pago: </h4>
                                 </div>
@@ -228,6 +231,7 @@
                                         <input class="form-control" [(ngModel)]="amount" name="amount"  type="number"  >
                                     </div>
                                 </div>
+                            -->
 
                                 <!-- <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
@@ -271,10 +275,6 @@
                     </div>
                 </div>							
             </div>	
-            	
-
-
-
         </div>
     </div>
 </div>
