--- a/src/app/medical/appointment/add-appointments/add-appointments.component.html
+++ b/src/app/medical/appointment/add-appointments/add-appointments.component.html
@@ -159,8 +159,7 @@
                                   <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                       <label>N° Documento <span class="login-danger">*</span></label>
-                                      <input class="form-control"(keyup.enter)="identification_number.toString().length === 8 ? filterPatient() : null"[(ngModel)]="identification_number"name="identification_number" type="number"
-                                      (input)="validateNumbers()">
+                                      <input class="form-control"(keyup.enter)="identification_number.toString().length === 8 ? filterPatient() : null"[(ngModel)]="identification_number"name="identification_number" type="number">
                                     </div>
                                   </div>
                                 <div class="col-12 col-md-6 col-xl-4">  
@@ -173,7 +172,7 @@
                                 <div class="col-12 col-md-6 col-xl-4">
                                     <div class="form-group local-forms">
                                         <label >Surname <span class="login-danger">*</span></label>
-                                        <input class="form-control" disabled [(ngModel)]="last_name" name="surname" type="text"  >
+                                        <input class="form-control" disabled [(ngModel)]="last_name" name="last_name" type="text"  >
                                     </div>
                                 </div>
                                 <!-- 
