--- a/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
+++ b/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
@@ -177,3 +177,6 @@
     </div>
   </div>
 </div>
+<div #qrCodeContainer style="display: none">
+  <qrcode [qrdata]="'https://dar.reformaperu.org/'" [width]="100" [errorCorrectionLevel]="'M'"></qrcode>
+</div>
