--- a/src/app/medical/medical.component.html
+++ b/src/app/medical/medical.component.html
@@ -4,15 +4,14 @@
     'slide-nav': mobileSidebar === 'true'
 }">
     <app-header [ngClass]="{
-        'd-none': sideBarActivePath === false && headerActivePath === false}"></app-header>
+        'd-none': !sideBarActivePath && !headerActivePath}"></app-header>
     <app-sidebar [ngClass]="{
-        'd-none': sideBarActivePath === false && headerActivePath === false}"></app-sidebar>
+        'd-none': !sideBarActivePath && !headerActivePath}"></app-sidebar>
     <router-outlet></router-outlet>
-    <div
-class="sidebar-overlay"
-[ngClass]="{
-  opened: mobileSidebar === 'true'
-}"
-></div>
+  <div
+    class="sidebar-overlay"
+    [ngClass]="{ opened: mobileSidebar === 'true' }"
+    (click)="closeMobileSideBar()"
+  ></div>
     <!-- <app-modal></app-modal> -->
 </div>
