--- a/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
+++ b/src/app/medical/patient-m/list-patient-m/list-patient-m.component.html
@@ -28,19 +28,18 @@
                   <div class="doctor-table-blk">
                     <h3>Lista de pacientes</h3>
 
-                    <!--<div class="doctor-search-blk">
-                      <div class="top-nav-search table-search-blk">
-                        <input class="form-control" placeholder="Search here" [(ngModel)]="searchDataValue"
-                               (keyup.enter)="searchData()">
-                        <a class="btn"><img src="assets/img/icons/search-normal.svg" alt=""></a>
+                    <div class="doctor-search-blk">
+                      <div class="top-nav-search table-search-blk d-flex">
+                        <input
+                          class="form-control"
+                          placeholder="Buscar paciente"
+                          [(ngModel)]="searchDataValue"
+                          (keyup.enter)="searchData()">
+                        <a class="btn ms-2" (click)="searchData()">
+                          <img src="assets/img/icons/search-normal.svg" alt="">
+                        </a>
                       </div>
-                      <div class="add-group">
-                        <a routerLink="/patient-m/register" class="btn btn-primary add-pluss ms-2"><img
-                          src="assets/img/icons/plus.svg" alt=""></a>
-                        <a href="javascript:;" (click)="PageSize()" class="btn btn-primary doctor-refresh ms-2"><img
-                          src="assets/img/icons/re-fresh.svg" alt=""></a>
-                      </div>
-                    </div>-->
+                    </div>
 
                   </div>
                 </div>
